# LazyDvorak

./: Cargo.toml  LICENSE  README.md
src/: app.rs  keyboard.rs  lib.rs  main.rs  stats.rs  translations.rs  types.rs  ui.rs
src/exercises/: mod.rs  vim.rs
src/exercises/code/: lua.rs  mod.rs  python.rs  ruby.rs  rust.rs  typescript.rs
src/exercises/sentences/: dvorak.rs  mod.rs  normal.rs  qwerty.rs
src/exercises/words/: lua.rs  mod.rs  python.rs  ruby.rs  rust.rs  simple.rs  typescript.rs
