[package]
name = "LazyDvorak"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }

[lib]
name = "lazydvorak"
path = "src/lib.rs"

[[bin]]
name = "lazydvorak"
path = "src/main.rs"

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-unknown-linux-gnu-gcc"
